feat: Changes to UI

--- a/todo-list/src/styles/CreateTask.css
+++ b/todo-list/src/styles/CreateTask.css
@@ -22,7 +22,7 @@
 
 .create-task button {
     padding: 0.75rem;
-    background: #3925ef;
+    background: #4634e8;
     color: white;
     border: none;
     border-radius: 4px;
