--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -10,3 +10,9 @@
   display: flex;
   flex-direction: column;
 }
+
+body {
+  background-color: #071836;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
