--- a/todo-list/src/styles/Login.css
+++ b/todo-list/src/styles/Login.css
@@ -26,7 +26,7 @@
 }
 
 .form-group input {
-    width: 100%;
+    width: 85%;
     padding: 0.75rem;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -40,7 +40,7 @@
 }
 
 .login-button {
-    width: 100%;
+    width: 70%;
     padding: 0.75rem;
     background-color: #0056b3;
     color: white;
@@ -52,5 +52,5 @@
 }
 
 .login-button:hover {
-    background-color: #004494;
+    background-color: #02720f;
 }
